# SingleAzureKinect3DReconstruction

./: .editorconfig  .gitignore  AcquiringImages.cpp  AcquiringPointCloud.cpp  CMakeLists.txt  CasAzureKinectExtrinsics.h  CasPointCloud.cpp  CasPointCloud.h  CasViewingPointCloud.cpp  CasWebSocket.cpp  CasWebSocket.h  Main.cpp  README.md  azure_kinect_sensor_conf.json  base.cpp  default.conf  mycobot_main.cpp
include/: BotCar.pb.h  BotGripper.pb.h  BotMotor.pb.h  CasAzureKinect.h  CasAzureKinectExtrinsics.h  CasBot.h  CasConfig.h  CasIp.h  CasNetwork.h  CasPointCloud.h  CasSoundSourceLocalization.h  CasUtility.h  CasWebSocket.h  DataMessage.pb.h  Mesh.pb.h  SoundSource.pb.h  Temperature.pb.h  polygon.pb.h
src/: AcquiringPointCloud.cpp  AzureKinectMKVReader.cpp  AzureKinectRecord.cpp  AzureKinectViewer.cpp  BotCar.pb.cc  BotGripper.pb.cc  BotMotor.pb.cc  CasAzureKinect.cpp  CasAzureKinectExtrinsics.cpp  CasBot.cpp  CasConfig.cpp  CasConfig.h  CasControlCar.cpp  CasGenerateColorPointCloud.cpp  CasGeneratePointCloud.cpp  CasIp.cpp  CasNetwork.cpp  CasOpen3DTest.cpp  CasSoundSourceLocalization.cpp  CasUtility.cpp  CasViewingPointCloud.cpp  CasWebSocket.cpp  DataMessage.pb.cc  EmergencyTeleoperatedRobotSystem.cpp  FastPointCloud.cpp  Hello.cpp  Hello.h  Mesh.pb.cc  OfflineSLAM.cpp  SoundSource.pb.cc  TcpTest.cpp  Temperature.pb.cc  Untitled-1.cpp  calcQ.cpp  default.conf  polygon.pb.cc  polygon.pb.h  protoTest.cpp  soundTest.cpp
src/point_clouds_recognition/: kaolin_test.py
src/protobuf/: BotArm.cs  BotArm.pb.cc  BotArm.pb.h  BotArm.proto  BotCar.cs  BotCar.pb.cc  BotCar.pb.h  BotCar.proto  BotGripper.cs  BotGripper.pb.cc  BotGripper.pb.h  BotGripper.proto  BotLed.cs  BotLed.pb.cc  BotLed.pb.h  BotLed.proto  BotMotor.cs  BotMotor.pb.cc  BotMotor.pb.h  BotMotor.proto  DataMessage.cs  DataMessage.proto  KinectMode.cs  KinectMode.proto  Mesh.cs  Mesh.pb.cc  Mesh.pb.h  Mesh.proto  SoundSource.cs  SoundSource.pb.cc  SoundSource.pb.h  SoundSource.proto  TempAndHumi.cs  TempAndHumi.pb.cc  TempAndHumi.pb.h  TempAndHumi.proto  Temperature.proto
